# ChatPlays

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ChatPlays.sln  ChatPlays.vcxproj  ChatPlays.vcxproj.filters  LICENSE  README.md
Header/: Buffer.h  Command.h  Connect.h  Controller.h  PineClient.h  connect.h  control.h  ipc.h  message.h  settings.h  twitch.h
Header/Linux/: EvDev.h  LinuxSock.h  Uinput.h  connect.h  control.h
Header/Settings/: Oauth.h  Settings.h
Header/Windows/: WinConnect.h  Xinput.h  control.h  winConnect.h
settings/: settings.json
src/: Buffer.cpp  Command.cpp  PineClient.cpp  connect.cpp  control.cpp  ipc.cpp  main.cpp  message.cpp  settings.cpp  twitch.cpp
src/Linux/: EvDev.cpp  LinuxSock.cpp  Uinput.cpp  connect.cpp  control.cpp
src/Settings/: Oauth.cpp  Settings.cpp
src/Windows/: WinConnect.cpp  Xinput.cpp  control.cpp  winConnect.cpp
